# cc-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
.tasks/: meta.json
.tasks/epics/: epic-1-test-all-features.md
.tasks/learnings/: 20260321-021450.json
.tasks/tasks/: epic-1-test-all-features.1.json  epic-1-test-all-features.1.md  epic-1-test-all-features.2.json  epic-1-test-all-features.2.md  epic-1-test-all-features.3.json  epic-1-test-all-features.3.md
agents/: architect.md  build-fixer.md  cc-scout-build.md  cc-scout-context.md  cc-scout-docs-gap.md  cc-scout-docs.md  cc-scout-env.md  cc-scout-gaps.md  cc-scout-observability.md  cc-scout-practices.md  cc-scout-repo.md  cc-scout-security.md  cc-scout-testing.md  cc-scout-tooling.md  code-reviewer.md  db-reviewer.md  doc-updater.md  e2e-runner.md  planner.md  python-reviewer.md  refactor-cleaner.md  researcher.md  security-reviewer.md
commands/: audit.md  autoimmune.md  brainstorm.md  cc-adversarial-review.md  cc-architecture.md  cc-aside.md  cc-async-patterns.md  cc-audit.md  cc-autoimmune.md  cc-autonomous-loops.md  cc-blueprint.md  cc-brainstorm.md  cc-bridge.md  cc-browser-qa.md  cc-browser.md  cc-clean-architecture.md  cc-clone-site.md  cc-code-review-loop.md  cc-commit.md  cc-context-tips.md  cc-database.md  cc-debug.md  cc-dependency-upgrade.md  cc-deploy.md  cc-deps.md  cc-docs.md  cc-elicit.md  cc-epic-review.md  cc-error-handling.md  cc-fastapi.md  cc-feedback-loop.md  cc-fix.md  cc-git-workflow.md  cc-go.md  cc-grill-me.md  cc-help.md  cc-incident.md  cc-interview.md  cc-logging.md  cc-multi-plan.md  (+64 more)
dashboard/: package.json
dashboard/client/: index.html  package.json  vite.config.js
dashboard/server/: index.js
examples/plugins/: notify.py  timer.py
hooks/: config-protect.sh  failure-counter.sh  hooks.json  learn-observer.sh  mode-guard.sh  post-edit-verify.sh  post-task-hint.sh  pre-commit-gate.sh  pre-compact.sh  pre-push-review.sh  prompt-context.sh  semantic-verify.sh  session-end.sh  session-start.md  session-start.sh  subagent-complete.sh  worktree-guard.sh
rules/: agent-orchestration.md  ask-user.md  docs-sync.md  git.md  performance.md  proactive-suggestions.md  python-style.md  security.md  testing.md  tool-priority.md  workflow.md
scripts/: cc-flow.py  morph_client.py  taskctl.py  worktree.sh
scripts/cc_flow/: __init__.py  __main__.py  adversarial_review.py  ai_router.py  aliases.py  analytics.py  auto.py  auto_learn.py  auto_ops.py  autopilot.py  bridge.py  browser_qa.py  chains.json  checkpoint.py  cli.py  config.py  context.py  context_budget.py  core.py  cross_project_eval.py  dashboard_events.py  design_review.py  doctor.py  embeddings.py  engines.py  entry.py  epic_task.py  eval_harness.py  failure_engine.py  gh_sync.py  go.py  graph.py  insights.py  intelligence.py  learning.py  log_cmds.py  memory.py  misc.py  modes.py  morph_cmds.py  (+37 more)
skills/async-patterns/: SKILL.md
skills/autoimmune/: SKILL.md
skills/brainstorming/: SKILL.md
skills/cc-architecture/: SKILL.md
skills/cc-aside/: SKILL.md
skills/cc-async-patterns/: SKILL.md
skills/cc-autoimmune/: SKILL.md
skills/cc-autonomous-loops/: SKILL.md
skills/cc-brainstorming/: SKILL.md
skills/cc-bridge/: SKILL.md
skills/cc-browser/: SKILL.md
skills/cc-browser-qa/: SKILL.md
skills/cc-clean-architecture/: SKILL.md
skills/cc-clone-site/: SKILL.md
skills/cc-code-review-loop/: SKILL.md
skills/cc-context-tips/: SKILL.md
skills/cc-database/: SKILL.md
skills/cc-debugging/: SKILL.md
skills/cc-go/: SKILL.md
tests/: test_adversarial_review.py  test_ai_router.py  test_auto.py  test_autopilot.py  test_bridge.py  test_cc_flow.py  test_features.py  test_go.py  test_helpers.py  test_morph_client.py  test_multi_plan.py  test_multi_review.py  test_pua_engine.py  test_skill_flow.py  test_wf_executor.py  test_wisdom.py
(+104 files in other folders)
