[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-code"
version = "5.24.0"
description = "Development workflow toolkit for Claude Code"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
authors = [{name = "cc-code contributors"}]
keywords = ["workflow", "tasks", "ai", "claude", "claude-code", "cli", "task-management", "embeddings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/z23cc/cc-code"
Repository = "https://github.com/z23cc/cc-code"
Changelog = "https://github.com/z23cc/cc-code/blob/main/CHANGELOG.md"

[project.scripts]
cc-flow = "cc_flow.entry:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.14", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.ruff]
line-length = 160
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "BLE", "C901", "COM812", "N", "SIM108", "PERF", "RUF", "PLW1510", "PLR0915", "TRY300"]
ignore = ["S101", "S110", "S603", "S607", "S310", "RUF001", "RUF002", "RUF003", "RUF005", "BLE001", "TRY300", "C901", "PLR0915", "E741", "N806", "S108", "S103", "PERF203", "PERF401", "B007"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
